syntax = "proto3";

package resourceaggregate.pb;

import "github.com/plgd-dev/hub/resource-aggregate/pb/commands.proto";

option go_package = "github.com/plgd-dev/hub/resource-aggregate/service;service";

service ResourceAggregate {
  rpc PublishResourceLinks (PublishResourceLinksRequest) returns (PublishResourceLinksResponse) {}
  rpc UnpublishResourceLinks (UnpublishResourceLinksRequest) returns (UnpublishResourceLinksResponse) {}
  rpc NotifyResourceChanged (NotifyResourceChangedRequest) returns (NotifyResourceChangedResponse){}
  rpc UpdateResource (UpdateResourceRequest) returns (UpdateResourceResponse) {}
  rpc ConfirmResourceUpdate (ConfirmResourceUpdateRequest) returns (ConfirmResourceUpdateResponse) {}
  rpc RetrieveResource (RetrieveResourceRequest) returns (RetrieveResourceResponse) {}
  rpc ConfirmResourceRetrieve (ConfirmResourceRetrieveRequest) returns (ConfirmResourceRetrieveResponse) {}
  rpc DeleteResource (DeleteResourceRequest) returns (DeleteResourceResponse) {}
  rpc ConfirmResourceDelete (ConfirmResourceDeleteRequest) returns (ConfirmResourceDeleteResponse) {}
  rpc CreateResource (CreateResourceRequest) returns (CreateResourceResponse) {}
  rpc ConfirmResourceCreate (ConfirmResourceCreateRequest) returns (ConfirmResourceCreateResponse) {}
  rpc UpdateDeviceMetadata (UpdateDeviceMetadataRequest) returns (UpdateDeviceMetadataResponse) {}
  rpc ConfirmDeviceMetadataUpdate (ConfirmDeviceMetadataUpdateRequest) returns (ConfirmDeviceMetadataUpdateResponse) {}
  rpc CancelPendingMetadataUpdates(CancelPendingMetadataUpdatesRequest) returns (CancelPendingMetadataUpdatesResponse) {}
  rpc CancelPendingCommands(CancelPendingCommandsRequest) returns (CancelPendingCommandsResponse) {}
  rpc DeleteDevices (DeleteDevicesRequest) returns (DeleteDevicesResponse) {}
}
